--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -31,7 +31,7 @@
 
                 <div class="dashboard-frame">
                     <h3>Lecturers without Assigned Timetable</h3>
-                    <p class="dashboard-text" style="color:#e63e3e">{{ unassigned_count }}</p>
+                    <p class="dashboard-text" style="color:#e63e3e">{{ unassigned_count|length }}</p>
                 </div>
 
                 {% set days = [
