--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -146,6 +146,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     {% block extra_scripts %}{% endblock %}
 </body>
