--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -90,12 +90,12 @@
         <h4 style="text-align: center;">Link Timetable With Staff</h4>
         <div class="profile-frame">
             <div class="form-left">
-                <label>Timetable Unassigned</label>
-                <select name="timetableList" id="timetableList" required>
-                    <option value="" disabled selected>Select Timetable by Staff Name</option>
-                    {% for item in unassigned_data %}
-                        <option value="{{ item.rowId }}">
-                            {{ item.lecturer }} [{{ item.count }} line(s)] - RowID: {{ item.rowId }}
+                <label>Unassigned Lecturers</label>
+                <select name="lecturerName" id="lecturerName" required>
+                    <option value="" disabled selected>Select Lecturer</option>
+                    {% for item in unassigned_summary %}
+                        <option value="{{ item.lecturer }}">
+                            {{ item.lecturer }} [{{ item.count }} row(s)]
                         </option>
                     {% endfor %}
                 </select>
@@ -115,11 +115,12 @@
         <br><br>
 
         <div class="button-wrapper">
-            <button type="submit" id="uploadButton">Linked Timetable</button>
+            <button type="submit" id="linkButton">Link Timetable</button>
         </div>
     </div>
 </form>
 {% endblock %}
+
 
 
 
