--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -379,7 +379,7 @@
     // === Create charts ===
     createPieChart('staffPieChart',
         ['Admin', 'Lecturer', 'Dean', 'HOP'],
-        [{{ total_admin }}, {{ total_lecturer }}, {{ total_Dean }}, {{ total_hop }}],
+        [{{ total_admin }}, {{ total_lecturer }}, {{ total_dean }}, {{ total_hop }}],
         defaultColors, defaultBorders, 'Staff Distribution'
     );
 
