--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -131,10 +131,9 @@
             <div class="form-right">
                 <label>Staff Linked</label>
                 <select name="staffList" id="editStaffList" required>
-                    <option value="" disabled>Select Staff</option>
+                    <option value="" disabled selected>Select Staff</option>
                     {% for staff in staff_list %}
-                        <option value="" disabled selected>Select Staff</option>
-                            {% if timetable_select and staff.userId == timetable_select.user_id %}selected{% endif %}>
+                        <option value="{{ staff.userId }}">
                             [{{ staff.userId }}] {{ staff.userName }}
                         </option>
                     {% endfor %}
