--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -131,9 +131,10 @@
             <div class="form-right">
                 <label>Staff Linked</label>
                 <select name="staffList" id="editStaffList" required>
-                    <option value="" disabled selected>Select Staff</option>
+                    <option value="" disabled>Select Staff</option>
                     {% for staff in staff_list %}
-                        <option value="{{ staff.userId }}">
+                        <option value="{{ staff.userId }}"
+                            {% if timetable_select and staff.userId == timetable_select.user_id %}selected{% endif %}>
                             [{{ staff.userId }}] {{ staff.userName }}
                         </option>
                     {% endfor %}
