--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -118,7 +118,7 @@
         <div class="profile-frame">
             <div class="form-left">
                 <label>Existing Timetable List</label>
-                <select name="timetableId" id="editTimetableList" required>
+                <select name="editTimetableId" id="editTimetableList" required>
                     <option value="" disabled selected>Select Timetable</option>
                     {% for t in timetable_list %}
                         <option value="{{ t.timetableId }}">
@@ -130,7 +130,7 @@
 
             <div class="form-right">
                 <label>Staff Linked</label>
-                <select name="staffList" id="editStaffList" required>
+                <select name="editStaffList" id="editStaffList" required>
                     <option value="" disabled selected>Select Staff</option>
                     {% for staff in staff_list %}
                         <option value="{{ staff.userId }}"
