--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -205,10 +205,10 @@
         <input type="hidden" name="form_type" value="edit">
         <br><br>
         <div class="button-wrapper" style="gap: 5%;">
-            <button type="submit" name="action" value="update" style="background-color: rgb(44, 238, 70);">
+            <button type="submit" name="action" value="update" style="background-color: #b0f0a5;">
                 <i class="fas fa-check"></i> Update Staff
             </button>
-            <button type="submit" name="action" value="delete" style="background-color: rgb(235, 120, 120);" 
+            <button type="submit" name="action" value="delete" style="background-color: #f0a5a0;" 
                     onclick="return confirm('Are you sure to delete this staff?')">
                 <i class="fas fa-trash"></i> Delete Staff
             </button>
