--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -198,10 +198,10 @@
         <br><br>
 
         <div class="button-wrapper" style="gap: 5%;">
-            <button type="submit" name="action" value="update" style="background-color: rgb(44, 238, 70);">
+            <button type="submit" name="action" value="update" style="background-color: #b0f0a5;">
                 <i class="fas fa-check"></i> Update Course
             </button>
-            <button type="submit" name="action" value="delete" style="background-color: rgb(235, 120, 120);" 
+            <button type="submit" name="action" value="delete" style="background-color: #f0a5a0;" 
                     onclick="return confirm('Are you sure to delete this course?')">
                 <i class="fas fa-trash"></i> Delete Course
             </button>
