--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -229,7 +229,7 @@
         <input type="hidden" name="form_type" value="edit"><br><br>
 
         <div class="button-wrapper" style="gap: 5%;">
-            <button type="submit" name="action" value="update" style="background-color: #b0f0a5;">
+            <button type="submit" name="action" value="update" style="background-color: #7DF090;">
                 <i class="fas fa-check"></i> Update Exam
             </button>
             <button type="submit" name="action" value="delete" style="background-color: #f0a5a0;" 
