--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -134,7 +134,7 @@
         <br><br>
 
         <div class="button-wrapper" style="gap: 5%;">
-            <button type="submit" name="action" value="update" style="background-color: #b0f0a5;">
+            <button type="submit" name="action" value="update" style="background-color: #7DF090;">
                 <i class="fas fa-check"></i> Update Venue
             </button>
             <button type="submit" name="action" value="delete" style="background-color: #f0a5a0;" 
