--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -139,7 +139,7 @@
                                 selected
                             {% endif %}>
                             {% if tid %}
-                                [Already With {{ tid }}]
+                                [Already With Timetable ID[{{ tid }}]]
                             {% endif %}
                             [{{ staff.userId }}] {{ staff.userName }}
                         </option>
