--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -137,7 +137,8 @@
     <div id="editSection" class="function-frame" style="width:100%">
         <h4 style="text-align:center;">Edit Existing Course</h4>
         <h5 style="text-align:center;">
-            Editing the Course Code or Course Section is not allowed. If you wish to make changes, it is recommended to delete the existing entry and re-insert it.
+            Editing the Course Code or Course Section is not allowed.<br>
+            If you wish to make changes, it is recommended to delete the existing entry and re-insert it.
         </h5><br>
 
         <!-- Prefilled form (like manual section) -->
